--- a/app/app.html
+++ b/app/app.html
@@ -29,7 +29,7 @@
     <div class="col-sm-12">
       <p>
         Data &amp; web service provided by 
-        <a href="http://www.mapman.gabipd.org" target="_blank">MapMan</a>
+        <a href="http://mapman.gabipd.org/web/guest" target="_blank">MapMan</a>
       </p>
     </div>
   <div>
