--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>test_mapman | AIP Science Apps | Test Runner</title>
+  <title>MapMan science app | AIP Science Apps | Test Runner</title>
   <link rel="shortcut icon" href="https://www.araport.org/sites/all/themes/custom/araport-theme/favicon.ico">
 
   <!-- jquery -->
