--- a/app/app.html
+++ b/app/app.html
@@ -1,4 +1,4 @@
-<div class="science-app" data-app-name="test-mapman">
+<div class="science-app" data-app-name="mapman">
 
   <form method="get" name="mapman-query">
     <div class="messages"></div>
